Sửa lỗi swagger và cập nhật thống kế
